--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,4 +1,4 @@
-{% include base_path %}
+<!-- {% include base_path %}
 
 {% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
@@ -81,4 +81,22 @@
     {% endif %}
 
   </article>
+</div>
+ -->
+
+ <div class="publication-item">
+  <h3 class="archive__item-title">
+    {% if post.paperurl %}
+      <a href="{{ post.paperurl }}" target="_blank">{{ post.title }}</a>
+    {% else %}
+      {{ post.title }}
+    {% endif %}
+  </h3>
+  <p>
+    <strong>Authors:</strong> {{ post.authors }}<br>
+    <strong>Venue:</strong> {{ post.venue }}<br>
+    {% if post.paperurl %}
+      <a href="{{ post.paperurl }}" target="_blank">[Paper]</a>
+    {% endif %}
+  </p>
 </div>
