--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -96,7 +96,7 @@
     <strong>Authors:</strong> {{ post.authors }}<br>
     <strong>Venue:</strong> {{ post.venue }}<br>
     {% if post.paperurl %}
-      <a href="{{ post.paperurl }}" target="_blank">[Paper]</a>
+      <a href="{{ post.paperurl }}" target="_blank">[Link]</a>
     {% endif %}
   </p>
 </div>
