--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -95,8 +95,8 @@
   <p>
     <strong>Authors:</strong> {{ post.authors }}<br>
     <strong>Venue:</strong> {{ post.venue }}<br>
-    {% if post.paperurl %}
+    <!-- {% if post.paperurl %}
       <a href="{{ post.paperurl }}" target="_blank">[Link]</a>
-    {% endif %}
+    {% endif %} -->
   </p>
 </div>
